5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1646_2730.log
== TEST (2019-04-17 07:44:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
#Leitura das coordenadsa do ponto
x = float(input("digite o valor de x: "))
y = float(input("digite o valor de y: "))

if(y >= 0):
	print(Superiores)
Else:
	print(Inferiores)

-- ERROR:
File "XXXX", line 8
    Else:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 07:44:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
#Leitura das coordenadsa do ponto
x = float(input("digite o valor de x: "))
y = float(input("digite o valor de y: "))

if(y >= 0):
	print(Superiores)
else:
	print(Inferiores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(Inferiores)
NameError: name 'Inferiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 07:45:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
#Leitura das coordenadsa do ponto
x = float(input("digite o valor de x: "))
y = float(input("digite o valor de y: "))

if(y >= 0):
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 07:45:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
#Leitura das coordenadsa do ponto
x = float(input("digite o valor de x: "))
y = float(input("digite o valor de y: "))

if(y >= 0):
	print("Superiores")
else:
	print("Inferiores")

-- EXECUTION TIME:
0.177153
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
